AccountFinder/force-app/main/default/objects/Megasena_Outcome__c/Megasena_Outcome__c.object-meta.xml
<CustomObject>
    <description>Megasena outcomes</description>
    <label>Megasena Outcome</label>
    <nameField>
        <label>Sorteio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Megasena Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>