AccountFinder/force-app/main/default/objects/Megasena_Outcome__c/fields/First_Tens__c.field-meta.xml
<CustomField>
    <fullName>First_Tens__c</fullName>
    <label>First Tens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>