AccountFinder/force-app/main/default/objects/Megasena_Outcome__c/fields/Fourth_Tens__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Tens__c</fullName>
    <label>Fourth Tens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>