AccountFinder/force-app/main/default/objects/Megasena_Outcome__c/fields/Third_Tens__c.field-meta.xml
<CustomField>
    <fullName>Third_Tens__c</fullName>
    <label>Third Tens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>