AccountFinder/force-app/main/default/objects/Megasena_Outcome__c/fields/Vezes_1__c.field-meta.xml
<CustomField>
    <fullName>Vezes_1__c</fullName>
    <label>% Vezes 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>